--- a/lascasitas-react/src/App.css
+++ b/lascasitas-react/src/App.css
@@ -72,8 +72,8 @@
 }
 
 .tarjeta-menu:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  transform: translateY(-4px) scale(1.01);
+  box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
 }
 
 .tarjeta-menu button:hover {
